# First_CPP_project

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Hole.cpp  Hole.h  Logic.cpp  Logic.h  Mancala.cpp  Mancala.h  Player.cpp  Player.h  README.md  main  main.cpp
